added jwt to cookie and protected routes
