# src/main/kotlin/alexa/execute/infrastructure/routes/userRoutes/UserRouting.kt
@@ -1,34 +1,54 @@
 package alexa.execute.infrastructure.routes.userRoutes
 
 import alexa.execute.infrastructure.services.UserService
+import io.ktor.http.*
 import io.ktor.server.application.*
+import io.ktor.server.auth.*
+import io.ktor.server.auth.jwt.*
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
 
 fun Application.userRouting(userService: UserService) {
     routing {
-        route("/user") {
 
-            get("/all") {
-                val users = userService.getAllUsers()
-                call.respond(users)
+        authenticate("jwt-auth") {
+            route("/user") {
 
-            }
+                get("/all") {
 
-            get("/{id}") {
-                val id = call.parameters["id"]
-                val user = id?.let { userService.getUser(it.toInt()) }
-                if (user != null) {
-                    call.respond(user)
-                } else {
-                    call.respond("something went wrong!")
+                    val users = userService.getAllUsers()
+                    call.respond(users)
+
                 }
+
+                get("/profile") {
+
+                    val principal = call.principal<JWTPrincipal>()
+                    if (principal == null) {
+                        call.respond(HttpStatusCode.Unauthorized, "Token is invalid!")
+                        return@get
+                    }
+                    println(principal)
+                    val email = principal?.payload?.getClaim("email")?.asString()
+
+                    if (email == null) {
+                        call.respond(HttpStatusCode.Unauthorized, "Token is invalid!")
+                        return@get
+                    }
+
+                    val user = userService.getUserByEmail(email)
+                    if (user != null) {
+                        call.respond(user)
+                    } else {
+                        call.respond("something went wrong! please, try again")
+                    }
+                }
+
+                post("/create") {
+
+                }
+
             }
-
-            post("/create") {
-
-            }
-
         }
     }
 }
